Add initial state logic for navigating quiz
- Add rough ability to go to previous or next quiz answers
- Render question and answer information on the quiz stage
- Allow for selecting quiz answers; this is currently buggy and allows
  for selecting multiple answers on the same question, but the last
  question shows the data-binding correctly

--- a/view/frontend/web/template/product-quiz/stage/intro.html
+++ b/view/frontend/web/template/product-quiz/stage/intro.html
@@ -1,4 +1,6 @@
 <div>
     <h2 data-bind="html: $parent.quizTitle"></h2>
     <p data-bind="html: $parent.quizDescription"></p>
+
+    <button data-bind="click: $parent.startQuiz, i18n: 'Get started!'"></button>
 </div>
