--- a/view/frontend/web/template/product-quiz/stage/quiz.html
+++ b/view/frontend/web/template/product-quiz/stage/quiz.html
@@ -1,10 +1,6 @@
 <div>
-    <h2 data-bind="text: $parent.currentQuestion().title"></h2>
-    <div data-bind="foreach: { data: $parent.currentQuestion().answers, as: 'answer' }">
-        <p data-bind="text: answer.selected"></p>
-        <button data-bind="click: $parentContext.$parent.currentQuestion().selectAnswer">
-            <span class="sr-only" data-bind="text: 'Select ' + answer.title"></span>
-        </button>
+    <div data-bind="foreach: { data: $parent.currentQuestion(), as: 'question' }">
+        <!-- ko template: getTemplate() --><!-- /ko -->
     </div>
 
     <button class="action secondary" data-bind="click: $parent.previous">
