Replace self with this
- Defining `self` outside of the Component context was resulting in
  issues where the wrong Question was being referenced when clicking
  answers (`self` was referring to the last-instantiated `self`, which
  was the last question). After replacing all instances with `this`, as
  well as using function literal syntax for clicking within the answer
  context, things are working as expected.

--- a/view/frontend/web/template/product-quiz/stage/quiz/answer.html
+++ b/view/frontend/web/template/product-quiz/stage/quiz/answer.html
@@ -1,4 +1,4 @@
 <p data-bind="text: answer.selected"></p>
-<button data-bind="click: question.selectAnswer">
+<button data-bind="click: function (data) { $parentContext.question.selectAnswer(data) }">
     <span class="sr-only" data-bind="text: 'Select ' + answer.title"></span>
 </button>
