Add safeguards for navigating quiz
- Ensure users cannot proceed to the next step until they have selected
  an answer
- Ensure users cannot go back further than than the first step
- Display a "View Results" button if users have completed the quiz

--- a/view/frontend/web/template/product-quiz/stage/quiz.html
+++ b/view/frontend/web/template/product-quiz/stage/quiz.html
@@ -3,13 +3,15 @@
         <!-- ko template: getTemplate() --><!-- /ko -->
     </div>
 
-    <button class="action secondary" data-bind="click: $parent.previous">
+    <button class="action secondary" data-bind="click: $parent.previous, enable: $parent.quizIndex > 0">
         <span data-bind="i18n: 'Previous'"></span>
     </button>
 
-    <button class="action primary" data-bind="click: $parent.next">
+    <button class="action primary" data-bind="click: $parent.next, enable: $parent.canProceedToNextStep()">
         <span data-bind="i18n: 'Next'"></span>
     </button>
+
+    <button data-bind="visible: $parent.canViewResults(), click: $parent.submit(), i18n: 'View results'"></button>
 
     <div class="quiz__pagination" data-bind="foreach: { data: $parent.questions, as: 'question' }">
         <span class="quiz__pagination-item" data-bind="text: $index, css: { 'quiz__pagination-item--active': $parentContext.$parent.currentQuestion().id == $index() }"></span>
