--- a/view/frontend/web/template/product-quiz/stage/quiz.html
+++ b/view/frontend/web/template/product-quiz/stage/quiz.html
@@ -11,7 +11,7 @@
         <span data-bind="i18n: 'Next'"></span>
     </button>
 
-    <button data-bind="visible: $parent.canViewResults(), click: $parent.submit(), i18n: 'View results'"></button>
+    <button data-bind="visible: $parent.canViewResults(), click: function () { $parent.submit() }, i18n: 'View results'"></button>
 
     <div class="quiz__pagination" data-bind="foreach: { data: $parent.questions, as: 'question' }">
         <span class="quiz__pagination-item" data-bind="text: $index, css: { 'quiz__pagination-item--active': $parentContext.$parent.currentQuestion().id == $index() }"></span>
