--- a/view/frontend/web/template/product-quiz/stage/intro.html
+++ b/view/frontend/web/template/product-quiz/stage/intro.html
@@ -1,4 +1,4 @@
-<div>
+<div class="product-quiz__intro">
     <h2 data-bind="html: $parent.quizTitle"></h2>
     <p data-bind="html: $parent.quizDescription"></p>
 
