--- a/view/frontend/web/template/product-quiz.html
+++ b/view/frontend/web/template/product-quiz.html
@@ -1,5 +1,5 @@
-<div data-bind="visible: isVisible">
-    <button data-bind="click: closeQuiz">
+<div class="product-quiz" data-bind="visible: isVisible">
+    <button class="product-quiz__close-button" data-bind="click: closeQuiz">
         <span class="sr-only" data-bind="i18n: 'Close product quiz'"></span>
         <span>&times;</span>
     </button>
