--- a/view/frontend/web/template/product-quiz/stage/quiz.html
+++ b/view/frontend/web/template/product-quiz/stage/quiz.html
@@ -1,20 +1,24 @@
 <div>
-    <div data-bind="foreach: { data: $parent.currentQuestion(), as: 'question' }">
+    <div class="product-quiz__questions" data-bind="foreach: { data: $parent.currentQuestion(), as: 'question' }">
         <!-- ko template: getTemplate() --><!-- /ko -->
     </div>
 
-    <button class="action secondary" data-bind="click: $parent.previous, enable: $parent.quizIndex > 0">
-        <span data-bind="i18n: 'Previous'"></span>
-    </button>
+    <div class="product-quiz__navigation">
+        <button class="action secondary" data-bind="click: $parent.previous, enable: $parent.quizIndex > 0">
+            <span data-bind="i18n: 'Previous'"></span>
+        </button>
 
-    <button class="action primary" data-bind="click: $parent.next, enable: $parent.canProceedToNextStep()">
-        <span data-bind="i18n: 'Next'"></span>
-    </button>
-
-    <button class="action secondary" data-bind="visible: $parent.canViewResults(), click: function () { $parent.restartQuiz() }, i18n: 'Restart Quiz'"></button>
-    <button class="action primary" data-bind="visible: $parent.canViewResults(), click: function () { $parent.submit() }, i18n: 'View results'"></button>
+        <button class="action primary" data-bind="click: $parent.next, enable: $parent.canProceedToNextStep()">
+            <span data-bind="i18n: 'Next'"></span>
+        </button>
+    </div>
 
     <div class="quiz__pagination" data-bind="foreach: { data: $parent.questions, as: 'question' }">
         <span class="quiz__pagination-item" data-bind="text: $index, css: { 'quiz__pagination-item--active': $parentContext.$parent.currentQuestion().id == $index() }"></span>
+    </div>
+
+    <div class="product-quiz__actions" data-bind="visible: $parent.canViewResults()">
+        <button class="action secondary" data-bind="click: function () { $parent.restartQuiz() }, i18n: 'Restart Quiz'"></button>
+        <button class="action primary" data-bind="click: function () { $parent.submit() }, i18n: 'View results'"></button>
     </div>
 </div>
