--- a/view/frontend/web/template/product-quiz/stage/intro.html
+++ b/view/frontend/web/template/product-quiz/stage/intro.html
@@ -1,6 +1,6 @@
 <div class="product-quiz__intro">
-    <h2 data-bind="html: $parent.quizTitle"></h2>
-    <p data-bind="html: $parent.quizDescription"></p>
+    <h2 class="product-quiz__title" data-bind="html: $parent.quizTitle"></h2>
+    <div class="product-quiz__description" data-bind="html: $parent.quizDescription"></div>
 
     <button data-bind="click: $parent.startQuiz, i18n: 'Get started!'"></button>
 </div>
