--- a/view/frontend/web/template/product-quiz/stage/quiz.html
+++ b/view/frontend/web/template/product-quiz/stage/quiz.html
@@ -13,8 +13,9 @@
         </button>
     </div>
 
-    <div class="quiz__pagination" data-bind="foreach: { data: $parent.questions, as: 'question' }">
-        <span class="quiz__pagination-item" data-bind="text: $index, css: { 'quiz__pagination-item--active': $parentContext.$parent.currentQuestion().id == $index() }"></span>
+    <div class="product-quiz__pagination" data-bind="foreach: { data: $parent.questions, as: 'question' }">
+        <span class="product-quiz__pagination-item" data-bind="css: { 'product-quiz__pagination-item--active': $parentContext.$parent.currentQuestion().id == $index() }">
+            <span class="sr-only" data-bind="i18n: 'Question '"></span><span class="sr-only" data-bind="text: $index"></span>
     </div>
 
     <div class="product-quiz__actions" data-bind="visible: $parent.canViewResults()">
