--- a/view/frontend/web/template/product-quiz/stage/quiz/answer.html
+++ b/view/frontend/web/template/product-quiz/stage/quiz/answer.html
@@ -1,6 +1,3 @@
-<div class="product-quiz__answer" data-bind="css: { 'product-quiz__answer--selected': answer.selected }">
-    <h3 data-bind="text: answer.title"></h3>
-    <button data-bind="click: function (data) { $parentContext.question.selectAnswer(data) }">
-        <span class="sr-only" data-bind="text: 'Select ' + answer.title"></span>
-    </button>
+<div class="product-quiz__answer" data-bind="css: { 'product-quiz__answer--selected': answer.selected }, click: function (data) { $parentContext.question.selectAnswer(data) }">
+    <h3 class="product-quiz__answer-title" data-bind="text: answer.title"></h3>
 </div>
