--- a/view/frontend/templates/product-quiz.phtml
+++ b/view/frontend/templates/product-quiz.phtml
@@ -11,7 +11,7 @@
 <script type="text/x-magento-init">
     {
         "*": {
-            "Magento_Ui/js/core/app": <?= $block->getJsLayout() ?>
+            "Magento_Ui/js/core/app": <?= /* @escapeNotVerified */ $block->getJsLayout() ?>
         }
     }
 </script>
