Fix product grid on Quiz form
- Previously, selecting any of the pagination, search or pagination size
  filters on the Quiz product grid resulted in users being kicked back
  to the dashboard with an "invalid form key" message. Adding the
  `ProductGrid` controller and adding the `getGridUrl` methods, similar
  to how the Category product grid has, fixed this and allows users to
  paginate as expected.

--- a/view/adminhtml/templates/productquiz/quiz/edit/assign_products.phtml
+++ b/view/adminhtml/templates/productquiz/quiz/edit/assign_products.phtml
@@ -1,6 +1,6 @@
 <?php
-/** @var \Silentpost\ProductQuiz\Block\Adminhtml\ProductQuiz\Quiz\AssignProducts $block */
-/** @var \Silentpost\ProductQuiz\Block\Adminhtml\ProductQuiz\Quiz\Product $blockGrid */
+/** @var \Silentpost\ProductQuiz\Block\Adminhtml\Quiz\AssignProducts $block */
+/** @var \Silentpost\ProductQuiz\Block\Adminhtml\Quiz\Product $blockGrid */
 /** @var \Magento\Framework\View\Helper\SecureHtmlRenderer $secureRenderer */
 
 $blockGrid = $block->getBlockGrid();
