Wire up Quiz data to frontend logic
- Add relationship methods to Quiz and Question models
- Add helper methods to the Quiz block to determine if the quiz is
  enabled
- Adjust the system config helper class to return the currently
  selected quiz
- Remove mocked data from the quiz JavaScript in favor of the config
  data returned from the Quiz block
- Add `?.` optional chaining to JavaScript `forEach` methods in case a
  quiz does not have a question or an answer (this should not occur if a
  quiz is properly set up, but has the potential to happen if a user
  sets up an unfinished quiz for testing)
- Add descriptions to the question and answer KO templates

--- a/view/frontend/templates/product-quiz.phtml
+++ b/view/frontend/templates/product-quiz.phtml
@@ -1,17 +1,19 @@
 <?php /** @var $block \Silentpost\ProductQuiz\Block\Quiz */ ?>
 
-<div data-bind="scope: 'productQuizContainer'">
-    <button data-bind="click: openQuiz">
-        <?= $block->escaper->escapeHtml(__('Open Quiz')) ?>
-    </button>
+<?php if ($block->hasQuiz()) : ?>
+    <div data-bind="scope: 'productQuizContainer'">
+        <button data-bind="click: openQuiz">
+            <?= $block->escaper->escapeHtml(__('Open Quiz')) ?>
+        </button>
 
-    <!-- ko template: getTemplate() --><!-- /ko -->
-</div>
+        <!-- ko template: getTemplate() --><!-- /ko -->
+    </div>
 
-<script type="text/x-magento-init">
-    {
-        "*": {
-            "Magento_Ui/js/core/app": <?= /* @escapeNotVerified */ $block->getJsLayout() ?>
+    <script type="text/x-magento-init">
+        {
+            "*": {
+                "Magento_Ui/js/core/app": <?= /* @escapeNotVerified */ $block->getJsLayout() ?>
+            }
         }
-    }
 </script>
+<?php endif ?>
