--- a/view/frontend/web/template/product-quiz/stage/quiz/question.html
+++ b/view/frontend/web/template/product-quiz/stage/quiz/question.html
@@ -1,5 +1,6 @@
 <div class="product-quiz__question">
     <h2 data-bind="text: question.title"></h2>
+    <div data-bind="html: question.description"></div>
 
     <div class="product-quiz__answers" data-bind="foreach: { data: question.answers, as: 'answer' }">
         <!-- ko template: getTemplate() --><!-- /ko -->
