Add button text, number of products to Quiz
- Add new fields to the Quiz: button text and number of products, as
  well as fields in the database and form to set these fields

--- a/view/frontend/web/template/product-quiz/stage/error.html
+++ b/view/frontend/web/template/product-quiz/stage/error.html
@@ -3,7 +3,7 @@
     <p data-bind="i18n: 'Please try again.'"></p>
 
     <div class="product-quiz__actions">
-        <button data-bind="click: function () { $parent.restartQuiz() }, i18n: 'Restart quiz'"></button>
-        <button data-bind="visible: $parent.canViewResults(), click: function () { $parent.submit() }, i18n: 'Resubmit results'"></button>
+        <button class="action secondary" data-bind="click: function () { $parent.restartQuiz() }, i18n: 'Restart quiz'"></button>
+        <button class="action primary" data-bind="visible: $parent.canViewResults(), click: function () { $parent.submit() }, i18n: 'Resubmit results'"></button>
     </div>
 </div>
