--- a/view/frontend/web/template/product-quiz/stage/intro.html
+++ b/view/frontend/web/template/product-quiz/stage/intro.html
@@ -2,5 +2,5 @@
     <h2 class="product-quiz__title" data-bind="html: $parent.quizTitle"></h2>
     <div class="product-quiz__description" data-bind="html: $parent.quizDescription"></div>
 
-    <button data-bind="click: $parent.startQuiz, i18n: 'Get started!'"></button>
+    <button data-bind="click: $parent.startQuiz, html: $parent.quizButtonText"></button>
 </div>
